Do not load backends when running with --feedback

BUG: 462711